--- a/asssets/css/web_header.css
+++ b/asssets/css/web_header.css
@@ -14,7 +14,7 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 99;
@@ -70,6 +70,9 @@ nav div div {
 }
 
 .web-header {
+    position: fixed;
+    right: 0;
+    left: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -77,6 +80,7 @@ nav div div {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
     min-width: 790px;
     padding-left: 232px;
+    background: #FFFFFF;
 }
 
 .web-header span {
