--- a/asssets/css/contacts.css
+++ b/asssets/css/contacts.css
@@ -220,6 +220,7 @@ hr {
     right: 0;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     background:  #F5F5F5;;
     z-index: 99;
