--- a/asssets/css/contacts_desktop.css
+++ b/asssets/css/contacts_desktop.css
@@ -45,6 +45,10 @@
     margin-top: 15px;
 }
 
+/* .edit-contact-logo:hover{
+    img: url("./asssets/img/pen-blue.svg");
+} */
+
 .edit-contact-text{
     margin-top: 26px;
     margin-left: 4px;
