--- a/asssets/css/cover_page.css
+++ b/asssets/css/cover_page.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
 }
 
-.logo-container {
+.first-page-logo-container {
     display: flex;
     justify-content: center;
     align-items: center;
