--- a/board.css
+++ b/board.css
@@ -46,11 +46,10 @@ body {
 .main-div {
     background-color: #F5F5F5;;
     width: 100%;
-    height: auto;
+    min-height: 926px;
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
-    padding-bottom: 100px;
 }
 
 .head-span {
@@ -77,10 +76,7 @@ body {
     flex-shrink: 1;
 }
 
-.title-section img {
-    width: 40px;
-    height: 40px;
-}
+ /*////////////////// Searchbar on Screen 0 - 1024px /////////////////*/
 
 .search-bar{
     position: relative;
@@ -88,7 +84,6 @@ body {
     width: 251px;
     height: 41px;
 }
-
 
 .search-input {
     width: 245px;
@@ -117,7 +112,16 @@ body {
     padding-left: 21px;
 }
 
-    /*////////////////// Main Content of Cards /////////////////*/
+     /*////////////////// Searchbar on Screen 1024px /////////////////*/
+
+.secondSearch-bar{
+    position: relative;
+    margin-right: 45px;
+    width: 251px;
+    height: 51px;
+}
+
+    /*////////////////// main content Cards /////////////////*/
 
 .task-content {
     height: auto;
@@ -148,7 +152,6 @@ body {
     margin-bottom: 22px;
     max-width: 363px;
 }
-
 
 .card-head img {
     width: 30px;
@@ -249,6 +252,7 @@ body {
 }
 
 .empty-card {
+    
     display: flex;
     align-items: center;
     justify-content: center;
@@ -261,6 +265,12 @@ body {
     font-weight: 400;
     font-size: 16px;
     color: #A8A8A8;
+    min-width: 250px;
+    max-width: 363px;
+}
+
+.dis-none {
+    display: none;
 }
 
 
@@ -269,4 +279,68 @@ body {
         max-width: 250px;
         height: auto;
     }
+
+    .head-title {
+        margin-left: 9px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .task-content {
+        margin-left: 282px;
+        margin-top: 50px;
+    }
+
+    .title-section {
+        margin-left: 275px;
+        margin-right: 52px;
+    }
+
+    .head-span {
+        display: none;
+    }
+
+    .search-bar {
+        display: none;
+    }
+
+    .edit-btn {
+        display: none;
+    }
+
+    .responsive-searchbar {
+        display: flex;
+    }
+
+    .secondSearch-bar-line {
+        position: absolute;
+        left: 204px;
+        margin-top: 6px;
+    }
+
+    .search-input{
+        height: 51px;
+        
+    }
+
+    .search-bar-line {
+        height: 38px;
+        margin-top: 9px;
+    }
+
+    .search-icon {
+        transform: translateY(86%);
+    }
+
+    .main-div{
+        padding-top: 86px;
+    }
+
+}
+
+@media (min-width: 1450px) {
+    .task-card {
+        max-width: 370px;
+        height: auto;
+}
 }
