--- a/asssets/css/web_header.css
+++ b/asssets/css/web_header.css
@@ -81,11 +81,12 @@ nav div div {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
     min-width: 790px;
     padding-left: 232px;
+    background: white;
 }
 
 .web-header span {
     font-size: 21px;
-    padding-left: 116px;
+    padding-left: 76px;
 }
 
 .img-container {
