--- a/asssets/templates/cover_page.html
+++ b/asssets/templates/cover_page.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="logo-container">
-        <img src="/asssets\img\Logo_white.svg" alt="">
+        <img src="./asssets/img/Logo_white.svg" alt="">
     </div>
 </body>
 
