--- a/asssets/templates/web_header.html
+++ b/asssets/templates/web_header.html
@@ -1,12 +1,12 @@
-<link rel="stylesheet" href="/asssets/css/web_header.css">
-<script src="js/header_include.js"></script>
+<link rel="stylesheet" href="./asssets/css/web_header.css">
+<script src="./js/header_include.js"></script>
 
 <body>
     <div onclick="closeBurgerMenu()" id="web-header" class="web-header">
         <span>Kanban Project Mangement Tool</span>
         <div class="img-container">
-            <img onclick="location.href='help.html'" class="question-icon" src="/asssets/img/question_icon.svg" alt="">
-            <img id="person-img" onclick="burgerMenuWithCallback()" class="person" src="/asssets/img/christina-wocintechchat-com-0Zx1bDv5BNY-unsplash 1.svg" alt="">
+            <img onclick="location.href='./help.html'" class="question-icon" src="./asssets/img/question_icon.svg" alt="">
+            <img id="person-img" onclick="burgerMenuWithCallback()" class="person" src="./asssets/img/christina-wocintechchat-com-0Zx1bDv5BNY-unsplash 1.svg" alt="">
         </div>
     </div>
     <div onclick="closeBurgerMenu()" id="background-container">
@@ -14,36 +14,36 @@
             <div id="burger-menu">
                 <a class="help" href="#">Help</a>
                 <a class="privacy" href="#">Leagal notice</a>
-                <a href="index.html">Log out</a>
+                <a href="./index.html">Log out</a>
             </div>
         </div>
     </div>
 
     <div class="nav-bar-container">
         <div id="nav-bar" onclick="closeBurgerMenu()" class="logo-container">
-            <img class="logo-white" src="/asssets/img/Join_logo_white.svg" alt="">
+            <img class="logo-white" src="./asssets/img/Join_logo_white.svg" alt="">
         </div>
         <nav  id="nav-bar" onclick="closeBurgerMenu()">
             <div class="nav-link-container">
-                <div onclick="location.href='summary.html'">
-                    <img class="icon" src="/asssets/img/Summary_icon_grey.svg" alt="">
+                <div onclick="location.href='./summary.html'">
+                    <img class="icon" src="./asssets/img/Summary_icon_grey.svg" alt="">
                     <span>Summary</span>
                 </div>
-                <div onclick="location.href='board.html'">
-                    <img class="icon" src="/asssets/img/Board_icon.svg" alt="">
+                <div onclick="location.href='./board.html'">
+                    <img class="icon" src="./asssets/img/Board_icon.svg" alt="">
                     <span>Board</span>
                 </div>
-                <div onclick="location.href='add_task.html'">
-                    <img class="icon" src="/asssets/img/Add_Task_icon.svg" alt="">
+                <div onclick="location.href='./add_task.html'">
+                    <img class="icon" src="./asssets/img/Add_Task_icon.svg" alt="">
                     <span>Add Task</span>
                 </div>
-                <div onclick="location.href='contacts.html'">
-                    <img class="icon" src="/asssets/img/Contacts.svg" alt="">
+                <div onclick="location.href='./contacts.html'">
+                    <img class="icon" src="./asssets/img/Contacts.svg" alt="">
                     <span>Contacts</span>
                 </div>
             </div>
-            <div onclick="location.href='privacy_policy.html'" class="legal-container">
-                <img src="/asssets/img/info.svg" alt="">
+            <div onclick="location.href='./privacy_policy.html'" class="legal-container">
+                <img src="./asssets/img/info.svg" alt="">
                 <span>Legal notice</span>
             </div>
         </nav>
