--- a/asssets/templates/header.html
+++ b/asssets/templates/header.html
@@ -1,14 +1,14 @@
 <header  id="header" onclick="closeBurgerMenu()">
-    <a href="#"><img class="logo" src="/asssets/img/mobile-login-logo-dark.svg" alt=""></a>
+    <a href="#"><img class="logo" src="./asssets/img/mobile-login-logo-dark.svg" alt=""></a>
     <a onclick="burgerMenu()" id="person-img"><img class="person"
-            src="/asssets/img/christina-wocintechchat-com-0Zx1bDv5BNY-unsplash 1.svg" alt=""></a>
+            src="./asssets/img/christina-wocintechchat-com-0Zx1bDv5BNY-unsplash 1.svg" alt=""></a>
 </header>
 <div onclick="closeBurgerMenu()" id="background-container">
     <div class="burger-menu-outer-container">
         <div id="burger-menu">
-            <a class="help" href="help.html">Help</a>
+            <a class="help" href="./help.html">Help</a>
             <a class="privacy" href="./privacy_policy.html">Leagal notice</a>
-            <a href="index.html">Log out</a>
+            <a href="./index.html">Log out</a>
         </div>
     </div>
 </div>
