add remote Storage

--- a/asssets/css/style.css
+++ b/asssets/css/style.css
@@ -1,7 +1,7 @@
 
 @font-face{
     font-family: Inter;
-    src: url(asssets/fonts/Inter-Regular.ttf);
+    src: url(./asssets/fonts/Inter-Regular.ttf);
 }
 
 
