--- a/asssets/css/footer.css
+++ b/asssets/css/footer.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Inter;
-    src: url(/asssets/fonts/Inter-Regular.ttf);
+    src: url(./asssets/fonts/Inter-Regular.ttf);
 }
 
 body {
