--- a/asssets/css/summary.css
+++ b/asssets/css/summary.css
@@ -17,6 +17,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 87%;
+    padding-top: 85px;
 }
 
 .first-section {
@@ -55,7 +56,7 @@ body {
 }
 
 .second-section {
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     flex-direction: column;
     gap: 24px;
@@ -90,6 +91,7 @@ body {
     font-weight: 500;
     font-size: 2.5vw;
     display: none;
+    margin-right: 123px
 }
 
 .welcome-name{
@@ -206,6 +208,10 @@ body {
 @media (min-width: 1024px) {
     .count-task div {
        height: 170px;
+    }
+
+    .main-div {
+        padding-top: 130px;
     }
 
     .count-task {
