--- a/asssets/css/style.css
+++ b/asssets/css/style.css
@@ -11,7 +11,7 @@
 }
 
 body{
-    font-family: Inter, sans-serif;
+    font-family: Inter, sans-serif !important;
     display: flex;
     justify-content: center;
 }
