add-task popUp added

--- a/asssets/css/add_task.css
+++ b/asssets/css/add_task.css
@@ -201,7 +201,7 @@ input[type="date"]::before {
   width: 100%;
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.3s ease-in-out;
+  transition: max-height 125ms ease-in-out;
   
   
   
@@ -259,7 +259,7 @@ flex-direction: column;
 width: 100%;
 max-height: 0;
 overflow: hidden;
-transition: max-height 0.3s ease-in-out;
+transition: max-height 125ms ease-in-out;
 }
 
 #dropdown-assign:not(.d-none) {
