--- a/board.css
+++ b/board.css
@@ -283,6 +283,43 @@ body {
     display: none;
 }
 
+/*----add-tast-popUp---------*/
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Abdunkelung des Hintergrunds */
+    z-index: 9999;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0s linear 0.3s;
+  }
+  
+  .popup-content {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    border-radius: 30px;
+    transform: translate(-50%, -50%);
+    width: 1116px;
+    height: 914px;
+    background-color: #ffffff;
+    z-index: 10000;
+    transition: opacity 0.3s ease;
+  }
+  
+  .popup-overlay.active {
+    opacity: 1;
+    visibility: visible;
+    transition-delay: 0s;
+  }
+  
+  .popup-content.active {
+    opacity: 1;
+  }
+
 
 @media (min-width: 813px) {
     .task-card {
