--- a/asssets/css/contact_media.css
+++ b/asssets/css/contact_media.css
@@ -40,7 +40,7 @@
     .contact-frame{
         overflow-y: scroll;
         height: 740px;
-        margin-top: 57px;
+        margin-top: -57px;
     }
 
     .hr-blue-small-left{
@@ -203,6 +203,25 @@
     h1{
         font-size: 42px;
     }
+
+    #desktop-hidden, #add-contact, #edit-contact {
+        transition: transform 0.125s ease-in-out;
+        transform: translateX(100%);
+      }
+
+      #content-big-contact{
+        transform: translateY(0%) !important
+        ;
+      }
+
+    .slide-in {
+        transform: translateX(0) !important;
+      }
+
+      .close-x-dark-container{
+        display: flex !important;
+        
+      }
 }
 
 @media(min-width: 940px){
