--- a/asssets/css/contacts.css
+++ b/asssets/css/contacts.css
@@ -1,6 +1,80 @@
-body{
-    flex-direction: column;
+/* ======= Global Styles ======== */
+
+@font-face{
+    font-family: Inter;
+    src: url(./asssets/fonts/Inter-Regular.ttf);
 }
+
+
+*{
+    margin: 0;
+    scroll-behavior: smooth;
+}
+
+body{
+    font-family: Inter, sans-serif !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+h1{
+    margin-left: 33px;
+    margin-top: 20px;
+    font-size: 47px;
+    font-weight: 700;
+}
+
+a{
+text-decoration: none;
+color: black;
+}
+
+.d-none{
+    display: none !important;
+}
+
+/* ======= Colors ======= */
+
+.orange{
+    background: #FF7A00;
+}
+
+.light-orange{
+    background: #FFC700;
+}
+
+
+.purple{
+    background: #9327FF;
+}
+
+.light-blue{
+    background: #29ABE2;
+}
+
+.pink{
+    background: #FC71FF;
+}
+
+.green{
+    background: #02CF2F;
+}
+
+.red{
+    background: #AF1616;
+}
+
+.gray{
+    background: #D1D1D1;
+}
+
+.white{
+    color: #FFFFFF;
+}
+
+
+/* ======= Main Contacs CSS ======== */
 
 .new-contact-frame {
     display: flex;
@@ -102,7 +176,7 @@ hr {
     width: 100%;
 }
 
-/* ===================== Big Contact ======================= */
+/* ======= Big Contact ======= */
 
 .content-big-contact {
     background: #F6F7F8;
@@ -210,7 +284,7 @@ hr {
     cursor: pointer;
 }
 
-/* ======================== Edit Contact ============================ */
+/* ======= Edit Contact ======== */
 
 .edit-contact, .add-contact{
     position: fixed;
@@ -346,7 +420,7 @@ form{
     cursor: pointer;
 }
 
-/* ============================ Add Contact ================= */
+/* ======= Add Contact ======= */
 
 .create-contact-container{
     display: flex;
