--- a/asssets/css/web_header.css
+++ b/asssets/css/web_header.css
@@ -1,7 +1,7 @@
-@font-face {
+/* @font-face {
     font-family: Inter;
     src: url(./asssets/fonts/Inter-Regular.ttf);
-}
+} */
 
 body {
     margin: 0;
