--- a/board.css
+++ b/board.css
@@ -308,6 +308,10 @@ body {
     background-color: #ffffff;
     z-index: 10000;
     transition: opacity 0.3s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
   }
   
   .popup-overlay.active {
