--- a/asssets/css/add_task_popUp.css
+++ b/asssets/css/add_task_popUp.css
@@ -335,8 +335,8 @@
     height: 55px;
     width: 136px;
     position: absolute;
-    left: 0;
-    top: 500px;
+    right: 270px;
+    top: 735px;
     transition: 125ms ease-in-out;
   }
 
@@ -371,8 +371,8 @@
     height: 55px;
     width: 187px;
     position: absolute;
-    right: 0;
-    top: 500px;
+    right: 70px;
+    top: 735px;
     transition: 125ms ease-in-out;
   }
 
@@ -413,4 +413,14 @@
 
 @media(min-width:1440px) {
    
+}
+
+.create-correctly{
+  margin-left: 16px
+}
+.cancel-img-hover {
+  display: none;
+}
+.cancel-img {
+  margin-left: 16px
 }
