--- a/asssets/css/footer.css
+++ b/asssets/css/footer.css
@@ -29,7 +29,9 @@ footer {
     height: 80px;
     justify-content: center;
     padding-bottom: 10px !important;
-
+}
+.clicked {
+    background-color: red;
 }
 
 .icon {
