--- a/asssets/templates/header.html
+++ b/asssets/templates/header.html
@@ -1,7 +1,8 @@
-<header  id="header" onclick="closeBurgerMenu()">
+<script src="./js/header_include.js"></script>
+<header id="header" onclick="closeBurgerMenu()">
     <a href="#"><img class="logo" src="./asssets/img/mobile-login-logo-dark.svg" alt=""></a>
     <a onclick="burgerMenu()" id="person-img"><img class="person"
-            src="./asssets/img/christina-wocintechchat-com-0Zx1bDv5BNY-unsplash 1.svg" alt=""></a>
+            src="./asssets/img/person.svg" alt=""></a>
 </header>
 <div onclick="closeBurgerMenu()" id="background-container">
     <div class="burger-menu-outer-container">
