--- a/asssets/css/contacts.css
+++ b/asssets/css/contacts.css
@@ -2,7 +2,7 @@
 
 @font-face{
     font-family: Inter;
-    src: url(./asssets/fonts/Inter-Regular.ttf);
+    src: url(/asssets/fonts/Inter-Regular.ttf);
 }
 
 
