--- a/asssets/css/contact_media.css
+++ b/asssets/css/contact_media.css
@@ -14,6 +14,17 @@
     }
 }
 
+@media(max-width: 768px){
+    .content-big-contact {
+        bottom: 0;
+        left: 0;
+    }
+}
+
+
+
+
+
 @media(min-width: 768px){
 
     .letter-frame {
@@ -22,7 +33,6 @@
 
     .desktop-page{
         flex-direction: row !important;
-        /* justify-content: center; */
     }
 
     .content-big-contact{
@@ -34,6 +44,7 @@
         height: calc(100% - 80px);
         right: 0;
         top: 75px;
+        background: #F6F7F8;
     }
 
 
@@ -44,8 +55,17 @@
     }
 
     .hr-blue-small-left{
-        height: 59px;
-        width: 3px;
+        height: 57px !important;
+        width: 3px !important;
+        margin-left: 33px;
+        background-color: #29ABE2;
+        border: none;
+    }
+
+    #hr-blue-small-left{
+        height: 3px !important;
+        width: 90px !important;
+        margin-left: 33px;
         background-color: #29ABE2;
         border: none;
     }
@@ -235,8 +255,6 @@
     }
 
     .contact-logo-bigger{
-        /* height: 120px;
-        width: 120px; */
         margin: 0 32px;
     }
 
