--- a/task-popUp.css
+++ b/task-popUp.css
@@ -1,16 +1,3 @@
-@font-face{
-    font-family: Inter;
-    src: url(asssets/fonts/Inter-Regular.ttf);
-}
-
-body {
-    font-family: 'Inter';
-    font-style: normal;
-    margin: 0;
-    scroll-behavior: smooth;
-    box-sizing: border-box;
-}
-
 
 .orange{
     background: #FF7A00;
@@ -46,21 +33,13 @@ body {
     background: #2A3647 ;
 }
 
-.main-div {
-    background-color: #F5F5F5;;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    overflow-y: scroll;
-}
+
 
 
 
     /* Head  */
 
-.popUp-head {
-    margin-top: 140px;
+.popUp-head-task {
     display: flex;
     justify-content: space-between;
     max-width: 569px;
@@ -69,11 +48,11 @@ body {
     margin-bottom: 36px;
 }
 
-.popUp-head img {
+.popUp-head-task img {
     cursor: pointer;
 }
 
-.task-category {
+.task-category-one {
     text-align: center;
     padding: 4px 36.5px;
     border-radius: 8px;
@@ -86,9 +65,9 @@ body {
 
     /* Title  */
 
-.popUp-title {
+.popUp-titled {
     font-weight: 700;
-    font-size: 36px;
+    font-size: 61px;
     color: #2A3647;
     margin-left: 33px;
     line-height: 120%;
@@ -104,7 +83,7 @@ body {
     margin: 25px 33px;
 }
 
-.bold {
+.bolder {
     font-weight: 700;
     margin-right: 25px;
 }
@@ -139,7 +118,7 @@ body {
 
 /* <!------------- Assigned to Section ------------> */
 
-.assignedTo-title {
+.assignedTo-titlE {
     font-weight: 700;
     font-size: 16px;
     margin-top: 29px;
@@ -147,7 +126,7 @@ body {
     margin-bottom: 31px;
 }
 
-.assignedTo-list {
+.assignedTo-listE {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -157,13 +136,13 @@ body {
     gap: 13px;
 }
 
-.assignedTo-div {
+.assignedTo-divE {
     display: flex;
     align-items: center;
     gap: 25px;
 }
 
-.assignedTo-icon {
+.assignedTo-iconE {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -243,7 +222,7 @@ body {
     height: 48px;
 }
 
-.dis-none {
+.display-none {
     display: none;
 }
 
@@ -270,14 +249,55 @@ body {
         display: none;
     }
 
-    .close-popUp-arrow {
+    .close-popUp-arrows {
         display: none;
     }
 
-    .close-popUp-x {
+    .close-popUp-xx {
         display: block;
         position: relative;
         bottom: 17px;
     }
 }
+
+/*----add-task-popUp---------*/
+.task-overlay-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Abdunkelung des Hintergrunds */
+    z-index: 9999;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0s linear 0.3s;
+  }
+  
+  .task-content-popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    border-radius: 30px;
+    transform: translate(-50%, -50%);
+    width: 623px;
+    height: 824px;
+    background-color: #ffffff;
+    z-index: 10000;
+    transition: opacity 0.3s ease;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+  }
+  
+  .task-overlay-popup.active {
+    opacity: 1;
+    visibility: visible;
+    transition-delay: 0s;
+  }
+  
+  .task-content-popup.active {
+    opacity: 1;
+  }
 
