--- a/asssets/templates/web_header.html
+++ b/asssets/templates/web_header.html
@@ -6,7 +6,7 @@
         <span>Kanban Project Mangement Tool</span>
         <div class="img-container">
             <img onclick="location.href='./help.html'" class="question-icon" src="./asssets/img/question_icon.svg" alt="">
-            <img id="person-img" onclick="burgerMenuWithCallback()" class="person" src="./asssets/img/christina-wocintechchat-com-0Zx1bDv5BNY-unsplash 1.svg" alt="">
+            <img id="person-img" onclick="burgerMenuWithCallback()" class="person" src="./asssets/img/person.svg" alt="">
         </div>
     </div>
     <div onclick="closeBurgerMenu()" id="background-container">
@@ -27,7 +27,7 @@
             <div class="nav-link-container">
                 <div onclick="location.href='./summary.html'">
                     <img class="icon" src="./asssets/img/Summary_icon_grey.svg" alt="">
-                    <span>Summary</span>
+                    <span id="nav-summary">Summary</span>
                 </div>
                 <div onclick="location.href='./board.html'">
                     <img class="icon" src="./asssets/img/Board_icon.svg" alt="">
