--- a/asssets/css/header.css
+++ b/asssets/css/header.css
@@ -1,3 +1,8 @@
+body {
+    overflow-x: hidden;
+}
+
+
 header,
 .mobile-header {
     display: flex;
@@ -45,6 +50,7 @@ header,
     display: none;
     max-width: 1024px;
     width: 100%;
+    z-index: 99;
 }
 
 .burger-menu-outer-container {
@@ -65,6 +71,13 @@ header,
     padding: 10px;
     width: 110px;
     height: 99px;
+    z-index: 4;
+    transition: 0.225ms ease-in-out;
+    transform: translateX(0);
+}
+
+.slide {
+    transform: translateX(125%);
 }
 
 #burger-menu a {
@@ -79,25 +92,30 @@ header,
     .mobile-header {
         display: flex;
     }
+
     #burger-menu {
         margin-top: 80px;
     }
 }
+
 @media (min-width:1024px) {
     #background-container {
         max-width: 100%;
         top: 80px;
         z-index: 99;
     }
+
     .help,
     .privacy {
         display: none;
     }
+
     #burger-menu {
         height: 33px;
         justify-content: center;
         align-items: center;
     }
+
     #burger-menu a {
         margin-top: 0;
         margin-left: 0;
