update new board

--- a/board.css
+++ b/board.css
@@ -295,6 +295,11 @@ body {
     display: none;
 }
 
+.drag-area-highlight {
+    background-color: #e0e0e06d;
+    border-radius: 30px;
+}
+
 
 /*----add-tast-popUp---------*/
 .popup-overlay {
